# libgssglue

./: Makefile.am  NEWS  README  configure.ac
debian/: changelog  control  copyright  libgssglue1.install  libgssglue1.symbols  not-installed  rules  watch
debian/tests/: bad-configs  bad-configs-root  control  gsasl-dovecot-gssapi  gsasl-dovecot-gssapi-heimdal  gsasl-dovecot-gssapi-heimdal-root  libgssglue
debian/upstream/: metadata
src/: Makefile.am  g_accept_sec_context.c  g_acquire_cred.c  g_canon_name.c  g_ccache_name.c  g_compare_name.c  g_context_time.c  g_delete_sec_context.c  g_dsp_name.c  g_dsp_status.c  g_dup_name.c  g_exp_name.c  g_exp_sec_context.c  g_get_mic.c  g_glue.c  g_imp_name.c  g_imp_sec_context.c  g_indicate_mechs.c  g_init_sec_context.c  g_initialize.c  g_inq_context.c  g_inq_cred.c  g_inq_names.c  g_lucid_context.c  g_mechname.c  g_mit_krb5_mech.c  g_oid_ops.c  g_process_context.c  g_rel_buffer.c  g_rel_cred.c  g_rel_name.c  g_rel_oid_set.c  g_seal.c  g_set_allowable_enctypes.c  g_sign.c  g_unseal.c  g_unwrap.c  g_verify.c  g_verify_mic.c  g_wrap.c  (+4 more)
src/gssglue/gssapi/: gssapi.h.in
tests/: generic.c
